--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,41 @@
+aiosmtplib==2.0.2
 annotated-types==0.5.0
 anyio==3.7.1
+bcrypt==4.0.1
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
+dnspython==2.4.2
+ecdsa==0.18.0
+email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.1
+fastapi-mail==1.4.1
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+numpy==1.24.4
+pandas==2.0.3
+passlib==1.7.4
+pyasn1==0.5.0
 pydantic==2.3.0
-pydantic-core==2.6.3
+pydantic-settings==2.0.3
+pydantic_core==2.6.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2023.3.post1
+requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.21
 starlette==0.27.0
-typing-extensions==4.7.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.5
 uvicorn==0.23.2
-passlib
-bcrypt
-sqlalchemy
-python-jose
-python-multipart
